--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/* html, */
+body {
+  display: flex;
+  position: relative;
+}
+
+
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid red; */
+}
+
+#video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+#video {
+  z-index: 0;
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+}
+
+canvas {
+  z-index: 0;
+}
